--- a/artifacts/contracts/DappBnbX.sol/DappBnbX.dbg.json
+++ b/artifacts/contracts/DappBnbX.sol/DappBnbX.dbg.json
@@ -1,4 +1,4 @@
 {
   "_format": "hh-sol-dbg-1",
-  "buildInfo": "../../build-info/6c756073e35db74fe86b7c6c13dfcff9.json"
+  "buildInfo": "..\\..\\build-info\\aef5f5056d28431f3751f1d4f8831586.json"
 }
